# de.cau.cs.kieler

common/doc/: codetemplates.xml
cruisecontrol/CCtest/: .project  build.xml
cruisecontrol/ccworkingdir/: build-helloworld.xml  build-kev-prepare.sh  build-kev.xml  build-kieler.xml  config.xml
cruisecontrol/de.cau.cs.kieler.updatesite/: .project  artifacts.xml  content.xml  kieler.product  site.xml
cruisecontrol/edu.unikiel.rtsys.kieler.updatesite/: site.xml
de.cau.cs.kieler.repository/: category.xml  kieler.product  pom.xml
de.cau.cs.kieler.viewmanagement/: plugin.xml
de.cau.cs.kieler.viewmanagement.effects/: .project  plugin.xml
de.cau.cs.kieler.viewmanagement.effects/src/: DefaultTestEffect.java
de.cau.cs.kieler.viewmanagement.triggers/: .project  plugin.xml
de.cau.cs.kieler.viewmanagement/schema/: de.cau.cs.kieler.viewmanagement.combination.exsd  de.cau.cs.kieler.viewmanagement.triggers.exsd
doc/: codetemplates.xml  eclipse_formatter_kieler.xml  pub-rts.bib
doc/images/: kieler-examples-01.odg  kieler01.dot  svn-commit.tmp~
features/de.cau.cs.kieler.klots.feature/: .project  (+3 more)
features/de.cau.cs.kieler.klots.feature.source/: build.properties  feature.xml  pom.xml
kiml/layouter/de.cau.cs.kieler.kiml.layouter.graphvizjna/lib/graphviz/graphviz-2.20.3/tclpkg/tclstubs/: Makefile.am  tclInt.h
kiml/layouter/edu.unikiel.rtsys.kieler.kiml.layouter.graphvizjna/lib/graphviz/graphviz-2.20.3/tclpkg/tkstubs/: Makefile.am  tkStubLib.c
kodata/: .project
models/: .project
org.encog/: .classpath  build.properties
projectsets/: all.psf  working.psf
(+6329 files in other folders)
